kubernetes/apps/datasci/kubeflow/common-overlay/patches/auth-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    pod-security.kubernetes.io/enforce: privileged
