kubernetes/apps/datasci/kubeflow/common-overlay/patches/knative-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
  labels:
    pod-security.kubernetes.io/enforce: privileged
