kubernetes/apps/datasci/kubeflow/common-overlay/patches/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kubeflow.istio.local
        - "*.kubeflow.istio.local"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - kubeflow.istio.local
        - "*.kubeflow.istio.local"
      tls:
        mode: SIMPLE
        credentialName: istio-gateway-local-certs
